--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
         <title>encantar.js WebAR demo</title>
         <script src="encantar.js"></script>
         <script src="ar-demo.js"></script>
-        <style>body { background-color: #3d5afe; }</style>
+        <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    
+        <style>
+        
+            body { margin: 0;
+                overflow: hidden; }
+         #scan { width: 100%; height: 100%; object-fit: contain; opacity: 0.75; }
+         </style>
     </head>
     <body>
-        <div id="ar-viewport"></div>
-        <img id="Test1" src="Vorderseite_Bild.png" hidden>
+        <div id="ar-viewport">
+            <div id="ar-hud" hidden>
+                <img id="scan" src="scan.png" draggable="false">
+            </div>
+        </div>
         <img id="Test2" src="Vorderseite_Illustration.png" hidden>
-        <img id="Test3" src="Vorderseite_Pattern_Non-Repeating.png" hidden>
-        <img id="Test4" src="Vorderseite_Pattern_Repeating.png" hidden>
-        <img id="Test5" src="Vorderseite_Stripe.png" hidden>
+  
     </body>
 </html>
